# miniedr

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
rules/: eicar.yar  test.yar
src/: main.cpp
src/cli/: Args.cpp  Args.hpp
src/core/: Event.cpp  Event.hpp  EventBus.cpp  EventBus.hpp  Logger.cpp  Logger.hpp  StringUtil.cpp  StringUtil.hpp
src/detection/: HashDetector.cpp  HashDetector.hpp  IDetector.hpp  YaraDetector.cpp  YaraDetector.hpp
src/quarantine/: Quarantine.cpp  Quarantine.hpp
src/scanner/: DirectoryMonitor.cpp  DirectoryMonitor.hpp  FileScanner.cpp  FileScanner.hpp
src/storage/: Database.cpp  Database.hpp
